--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,13 +84,6 @@
                 android:value="com.mondkars.mondkarsproduct.MyCart" />
         </activity>
         <activity
-            android:name=".Activity3"
-            android:theme="@style/Activity3">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mondkars.mondkarsproduct.Activity3" />
-        </activity>
-        <activity
             android:name=".wishlist"
             android:theme="@style/ColorTheme2">
             <meta-data
@@ -100,6 +93,12 @@
         <activity
             android:name=".Activity2"
             android:theme="@style/Activity2" />
+        <activity
+            android:name=".UserDetailsActivity"
+            android:theme="@style/ActivityUserDetails" />
+        <activity
+            android:name=".OTPActivity"
+            android:theme="@style/OTPActivity" />
         <activity
             android:name=".Main2Activity"
             android:theme="@style/AppTheme.NoActionBar"
