--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,12 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mondkars.mondkarsproduct"
-    android:versionCode="12"
-    android:versionName="4.0">
+    android:versionCode="20"
+    android:versionName="5.0">
 
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
 
     <application
         android:allowBackup="true"
@@ -109,7 +110,7 @@
             android:theme="@style/OTPActivity" />
         <activity
             android:name=".Main2Activity"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/main2activity"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".MainActivity"
